# reelmaker

./: .gitignore  pyproject.toml  reel.tgz  requirements.txt  script_gen.py  sitecustomize.py  task.sh
src/: run.sh
src/reel_app/: config.py  main.py  models.py  script_gen.py  tasks.py  tts.py  video.py
src/reel_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_script_split.py
